# pythonfrp

./: Errors.py  Factory.py  Numerics.py  README.md  ReactiveUser.py  Signal.py  StaticNumerics.py  Types.py  pyproject.toml
pythonfrp/: Color.py  Engine.py  Factory.py  Functions.py  Globals.py  Interp.py  Printer.py  Proxy.py  StaticNumerics.py  World.py
