[tool.poetry]
name = "pythonfrp"
version = "0.1.0"
description = "an attempt to bring reactive programming into Python"
authors = ["WSCU, forked by gdmcbain"]
license = "unknown"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
